week_5/manifests/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paas-ui
  namespace: paas-control-plane
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paas-ui
  template:
    metadata:
      labels:
        app: paas-ui
    spec:
      imagePullSecrets:
      - name: stackit-registry-key
      containers:
      - name: ui
        image: registry.onstackit.cloud/level-3-paas/paas-ui:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: paas-ui
  namespace: paas-control-plane
spec:
  selector:
    app: paas-ui
  ports:
  - port: 80
    targetPort: 80
